# bennugd-monolithic

./: README.md  build.sh
core/bgdi/src/: main.c
core/bgdrtm/src/: dirs.c  interpreter.c  strings.c
core/common/: debug.c  files.c
core/include/: commons_defs.h  fmath.h  i_procdef_st.h  typedef_st.h
examples/wii/: 31_mod_sqlite3.prg  32_mod_chipmunk.prg
modules/libbgload/: bgload.c
modules/libsdlhandler/: libsdlhandler.c
modules/libvideo/: g_video.c
modules/mod_dir/: mod_dir.c
modules/mod_file/: mod_file.c
modules/mod_map/: mod_map.c
modules/mod_regex/: mod_regex.c  regex.c  regex.h
modules/mod_sound/: mod_sound.c
modules/mod_sys/: mod_sys.c
modules/mod_video/: mod_video.c
projects/android/: AndroidManifest.xml  COMPILING  build.gradle
projects/android/assets/: main.prg
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/android/jni/SDL/: Android.mk
projects/android/jni/SDL_mixer/: Android.mk
projects/android/jni/bgdrtm/: Android.mk
projects/android/jni/mikmod/: Android.mk
projects/android/jni/png/: Android.mk
projects/android/jni/smpeg2/: Android.mk
projects/android/jni/src/: Android.mk  main.c
projects/android/res/values/: strings.xml
projects/android/res/values-es/: strings.xml
projects/android/src/com/bombergames/SoRR/: Launcher.java
projects/android/src/org/bennugd/samplegame/: MyGame.java
projects/android/src/org/libsdl/app/: SDLActivity.java
projects/cmake/: build.sh
projects/cmake/bgdc/: CMakeLists.txt  bgdc.rc
projects/cmake/bgdi/: CMakeLists.txt  bgdi.rc
projects/cmake/bgdi/bgdrtm/: CMakeLists.txt
projects/cmake/include/: common_defs.cmake  compiler_flags.cmake
